kubernetes/apps/home/tesla-pubkey/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: tesla-pubkey
  namespace: home
spec:
  selector:
    app: tesla-pubkey
  ports:
    - port: 80
      targetPort: 80
