kubernetes/apps/home/tesla-pubkey/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tesla-pubkey
  namespace: home
spec:
  hostnames:
    - tesladev.${SECRET_DOMAIN}
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: tesla-pubkey
          port: 80
